testdata/baselines/reference/submodule/conformance/typeFromPropertyAssignment12.errors.txt
usage.js(2,7): error TS2339: Property 'Pos' does not exist on type '(element: any, config: any) => void'.
usage.js(4,7): error TS2339: Property 'Pos' does not exist on type '(element: any, config: any) => void'.
usage.js(5,21): error TS2339: Property 'Pos' does not exist on type '(element: any, config: any) => void'.


==== module.js (0 errors) ====
    var Outer = function(element, config) {};
==== usage.js (3 errors) ====
    /** @constructor */
    Outer.Pos = function (line, ch) {};
          ~~~
!!! error TS2339: Property 'Pos' does not exist on type '(element: any, config: any) => void'.
    /** @type {number} */
    Outer.Pos.prototype.line;
          ~~~
!!! error TS2339: Property 'Pos' does not exist on type '(element: any, config: any) => void'.
    var pos = new Outer.Pos(1, 'x');
                        ~~~
!!! error TS2339: Property 'Pos' does not exist on type '(element: any, config: any) => void'.
    pos.line;
    
    